ui_tests/should-fail/2_5-flex-mod-top-mod-attributes-below.stderr
error: attributes directly below the `flex_mod` attribute are not allowed
 --> should-fail/2_5-flex-mod-top-mod-attributes-below.rs:5:1
  |
5 | #[flex_mod]
  | ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `flex_mod` (in Nightly builds, run with -Z macro-backtrace for more info)
